Micro optimizations and tidy